# tauri_esp32_comunication

./: PLAN.md  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  serial.rs  signals.rs
src/components/ConfigUploader/: ConfigUploader.tsx  index.ts
src/components/ControlPanel/: ControlPanel.tsx
src/components/GearWheel/: CKPWheel.tsx  CMPWheel.tsx  GearWheel.tsx  InteractiveCKPWheel.tsx  InteractiveCMPWheel.tsx  ToothListEditor.tsx  index.ts
src/components/Oscilloscope/: Oscilloscope.tsx  index.ts
src/components/PortSelector/: PortSelector.tsx  index.ts
src/components/SignalEditor/: SignalEditor.tsx  index.ts
src/components/SignalLibrary/: SignalLibrary.tsx  index.ts
src/components/StatusDisplay/: StatusDisplay.tsx  index.ts
src/components/Toolbar/: Toolbar.tsx
src/components/ui/: button.tsx  context-menu.tsx  select.tsx
src/store/: connectionStore.ts  signalStore.ts
src/types/: index.ts
src/utils/: configCodec.ts  deviceCodec.ts  signalMath.ts
