[package]
name = "esp32-signal-injector"
version = "0.1.0"
description = "ESP32 CKP/CMP Signal Injector Controller"
authors = ["Lucas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "esp32_signal_injector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.5"
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"

